--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "type": "module",
   "scripts": {
     "server": "node server/index.js",
-    "client": "node client/index.js",
+    "client": "node --max-old-space-size=800 --expose-gc client/index.js",
+    "client:lowmem": "node --max-old-space-size=400 --expose-gc client/index.js",
+    "client:highmem": "node --max-old-space-size=1024 --expose-gc client/index.js",
     "getIPs": "node server/getIPs.js",
     "2faAPI": "node server/2faServer.js",
     "apiServer": "node server/2faServer.js",
     "postinstall": "node client/fix-tr46.js",
-    "dicebot": "node client/baccaratMartingale_v8.0.js"
+    "dicebot": "node --max-old-space-size=800 --expose-gc client/baccaratMartingale_v8.0.js",
+    "dicebot:lowmem": "node --max-old-space-size=400 --expose-gc client/baccaratMartingale_v8.0.js",
+    "start": "npm run client",
+    "restart:client": "pkill -f 'node client/index.js' && sleep 3 && npm run client",
+    "status": "ps aux | grep -E 'node (client/index.js|client/baccaratMartingale)' | grep -v grep"
   },
   "dependencies": {
     "axios": "^1.7.7",
